[package]
name = "bs"
version = "0.2.0"
edition = "2024"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
proptest = "1.6.0"
rand = "0.9.0"
rstest = "0.24.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[profile.dev]
debug = 0

[[bench]]
name = "found"
harness = false

[[bench]]
name = "not_found"
harness = false
