[package]
name = "bs"
version = "0.3.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[profile.dev]
debug = 0

[[bench]]
name = "found"
harness = false

[[bench]]
name = "not_found"
harness = false

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.11.0"
rand = "0.10.1"
rstest = "0.26.1"
