cabal-version:      3.12
name:               compiler-adventures
version:            0.1.0.0
license:            MIT
category:           Compilers
maintainer:         Graham Enos
synopsis:           AoC 2021 Day 24
description:        https://github.com/obi1kenobi/monad_compiler

executable compiler-adventures
    main-is:          Main.hs
    build-depends:    base ^>= 4.20.0.0
                      , attoparsec ^>= 0.14.4
                      , containers ^>= 0.7
                      , lens ^>= 5.3.2
                      , text ^>= 2.1.1
                      , transformers ^>= 0.6.1.1
    default-language: GHC2024
    ghc-options:      -Wall -Wextra
