cabal-version:  3.8
name:           du
version:        0.1.0.0
synopsis:       du in Haskell
description:    https://www.reddit.com/r/haskell/comments/cs54i/how_would_you_write_du_in_haskell/c0uvqqo
category:       System
homepage:       https://github.com/genos/du#readme
author:         Graham Enos
maintainer:     graham.enos@gmail.com
copyright:      Graham Enos
license:        MIT

executable du
  main-is: Main.hs
  ghc-options: -Wall -Werror
  build-depends:
      base >=4.7 && <5
    , directory
    , unix
  default-language: Haskell2010
