cabal-version:  3.8
name:           ebmc
version:        0.1.0.0
synopsis:       Random tweet by @evilbmcats
description:    Random tweet by @evilbmcats
category:       Math
homepage:       https://twitter.com/@evilbmcats
author:         Graham Enos
maintainer:     graham.enos@gmail.com
copyright:      Graham Enos
license:        MIT

executable ebmc
  main-is: Main.hs
  build-depends:
      base >=4.7 && <5
    , random
    , scalpel
    , text
  default-language: Haskell2010
