cabal-version:  3.8
name:           edsl
version:        0.1.0.0
synopsis:       https://jtobin.io/sharing-in-haskell-edsls
description:    Sharing in Haskell EDSL via PHOAS
category:       Math
author:         Graham Enos
maintainer:     graham.enos@gmail.com
copyright:      Graham Enos
license:        MIT

executable edsl
  main-is: Main.hs
  default-extensions: ScopedTypeVariables
  build-depends: base >= 4.7 && < 5
  default-language: GHC2024
