cabal-version:  3.8
name:           einstein
version:        0.1.0.0
synopsis:       Einstein's Problem in Haskell
description:    A _very_ slight variation of a encoding/solution of Einstein's problem in Haskell.
category:       Math
homepage:       https://maniagnosis.crsr.net/2009/12/einsteins-problem.html
author:         Graham Enos
maintainer:     graham.enos@gmail.com
copyright:      Graham Enos
license:        MIT

executable einstein
  main-is: Main.hs
  build-depends: base >=4.7 && <5
  default-language: Haskell2010
