cabal-version:  3.8
name:           form
version:        0.0.0
synopsis:       https://wickstrom.tech/programming/2019/11/17/time-travelling-and-fixing-bugs-with-property-based-testing.html
author:         Graham Enos
maintainer:     graham.enos@gmail.com
copyright:      2019 Graham Enos
license:        MIT

library
  exposed-modules:
      Form
  hs-source-dirs:
      src
  build-depends:
      base >=4.12 && <5
    , text
    , validation
  default-language: Haskell2010

test-suite form-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  build-depends:
      base >=4.12 && <5
    , form
    , hedgehog
    , text
    , validation
  default-language: Haskell2010
