[package]
name = "means"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.10.0"

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[[bench]]
name = "benchmark"
harness = false

[dev-dependencies]
criterion = { version = "0.7.0", features = ["csv_output"] }
proptest = "1.8.0"
rand = "0.9.2"
