[package]
name = "quantum-interpreter"
version = "0.5.0"
edition = "2024"

[dependencies]
faer = { version = "0.22.6", default-features = false, features = ["linalg", "perf-warn", "rand", "rayon", "std"] }
peg = "0.8.5"

[profile.dev]
debug = 0

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
