[package]
name = "ra-impls"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
rand = { version = "0.8.5", features = ["small_rng"] }

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
paste = "1.0.15"
proptest = "1.5.0"
