[package]
name = "ra"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
image = "0.25.6"
peg = "0.8.5"
rand = "0.9.1"

[dev-dependencies]
proptest = "1.6.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[profile.dev]
debug = 0
