[package]
name = "ra"
version = "0.4.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[profile.dev]
debug = 0

[dev-dependencies]
proptest = "1.8.0"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
image = "0.25.8"
peg = "0.8.5"
rand = "0.9.2"
