cabal-version:  3.8
name:           rs
version:        0.1.0.0
synopsis:       Recursion Schemes by Example
description:    Talk by Tim Williams at Londong HUG (2013)
category:       Math
homepage:       N/A
author:         Graham Enos
maintainer:     graham.enos@gmail.com
copyright:      Graham Enos
license:        MIT

executable rs
  main-is: Main.hs
  build-depends:
      base >=4.7 && <5
    , bool-extras
    , containers
    , hashable
    , hashtables
    , mtl
    , parsec
    , wl-pprint
  default-language: Haskell2010
