cabal-version:  3.8
name:           tasty-example
version:        0.1.0.0
synopsis:       Simple project template from stack
category:       Math
author:         Graham Enos
maintainer:     graham.enos@gmail.com
copyright:      Graham Enos
license:        MIT

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  exposed-modules:
      MyLib
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs:
      test
  ghc-options: -Wall -Werror
  build-depends:
      base >=4.7 && <5
    , tasty >=0.7
    , tasty-example
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck
  default-language: Haskell2010
