cabal-version:  3.8
name:           oaft
version:        0.1.0.0
synopsis:       oaft
description:    oaft
category:       Math
author:         Graham Enos
maintainer:     graham.enos@gmail.com
copyright:      Graham Enos
license:        MIT

executable oaft
  main-is: Main.hs
  build-depends:
      base >=4.7 && <5
    , text
  default-language: Haskell2010
